# youtube-clone

./: pyproject.toml  requirements.txt  vercel.json
core/: models.py  urls.py
core/forms/: comment_video_form.py  register_form.py  signin_form.py  upload_video_form.py
core/migrations/: 0001_initial.py
core/repositories/: comments_repository.py  user_repository.py  videos_repository.py
core/services/auth/: auth_service.py
core/services/comment/: comment_service.py
core/services/video/: video_service.py  youtube_service.py
core/services/vote/: vote_service.py
core/static/core/js/: comment.js  upload.js  video_fetcher.js  votes.js  watch.js
core/templates/: articles.html  base.html  error.html  index.html  layout.html  search.html  upload.html  watch.html
core/templates/auth/: register.html  signin.html
core/templates/components/: navbar.html  video.html
core/templates/components/related_videos/: related_videos.html
core/templates/partials/: comment_video_form.html  comments.html  dock.html  list_comments.html  list_videos.html  navbar.html  related_videos.html  search_videos.html
core/utils/data_class/: video_data.py
core/views/: error_page.py
core/views/auth/: register_view.py  signin_view.py  signout_view.py
core/views/comment/: comment_video_view.py
core/views/video/: list_videos_view.py  related_videos_view.py  search_videos_view.py  upload_video_view.py  video_votes.py  watch_view.py
staticfiles/js/: watch.js
theme/templates/: base.html
youtube/: settings.py  urls.py  wsgi.py
(+6 files in other folders)
