[project]
name = "youtube-clone"
version = "0.1.0"
description = ""
authors = [
    {name = "ManuelPuentes",email = "manuel.r.puentes.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "google-api-python-client (>=2.166.0,<3.0.0)",
    "isodate (>=0.7.2,<0.8.0)",
    "django-tailwind[reload] (>=4.0.1,<5.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
